crates/kul-core/tests/corpus/invalid/rule-08-adoption-end-before-start/rule-08-adoption-end-before-start.kul
person alice name:"Alice" gender:female
person bob   name:"Bob"   gender:male
person ravi  name:"Ravi"  gender:male
  adoption m_alice_bob start:1990-06-01 end:1985-01-01

marriage m_alice_bob alice bob start:1972-05-12
